plugins {
    id 'application'
}

group = 'org.nowstart'
version = '0.0.1'

ext {
    gdxVersion = '1.14.0'
    lwjglVersion = '3.4.0'
    junitVersion = '5.10.2'
    lombokVersion = '1.18.44'
    archUnitVersion = '1.4.1'
}

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

dependencies {
    implementation enforcedPlatform("org.lwjgl:lwjgl-bom:${lwjglVersion}")
    implementation "com.badlogicgames.gdx:gdx-backend-lwjgl3:${gdxVersion}"
    implementation "com.badlogicgames.gdx:gdx-freetype:${gdxVersion}"
    runtimeOnly "com.badlogicgames.gdx:gdx-platform:${gdxVersion}:natives-desktop"
    runtimeOnly "com.badlogicgames.gdx:gdx-freetype-platform:${gdxVersion}:natives-desktop"

    compileOnly "org.projectlombok:lombok:${lombokVersion}"
    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"

    testImplementation "org.junit.jupiter:junit-jupiter:${junitVersion}"
    testImplementation "com.tngtech.archunit:archunit-junit5:${archUnitVersion}"
    testRuntimeOnly "org.junit.platform:junit-platform-launcher"
    testCompileOnly "org.projectlombok:lombok:${lombokVersion}"
    testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"
}

application {
    mainClass = 'org.nowstart.zunyang.partypanic.DesktopLauncher'
    applicationDefaultJvmArgs = [
            '--enable-native-access=ALL-UNNAMED'
    ] + (System.getProperty('os.name').toLowerCase().contains('mac')
            ? ['-XstartOnFirstThread']
            : [])
}

test {
    useJUnitPlatform()
}
